Explicitly reference .flake8 config in GitHub Actions
- Added --config=.flake8 parameter to ensure config file is used
- This should resolve the CI flake8 failures by using our ignore rules

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -36,7 +36,7 @@ jobs:
         
     - name: Lint with flake8
       run: |
-        flake8 . --count --show-source --statistics
+        flake8 . --config=.flake8 --count --show-source --statistics
         
     - name: Type checking with mypy
       run: |
